# model-evaluator

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml
src/: app.py  utils.py
tf-serving/: Dockerfile
