[project]
name = "model-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bm25s>=0.2.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "rapidfuzz>=3.10.0",
    "scikit-learn>=1.5.2",
    "sentence-transformers>=3.1.1",
    "streamlit>=1.39.0",
]
